fix avatar align compoff table

--- a/src/pages/TimeOff/components/EmployeeRole/components/TimeOffRequestsTable/components/CompoffTable/index.less
+++ b/src/pages/TimeOff/components/EmployeeRole/components/TimeOffRequestsTable/components/CompoffTable/index.less
@@ -111,6 +111,8 @@
     }
   }
   .rowAction {
+    display: flex;
+    align-items: center;
     span {
       text-decoration: underline;
       cursor: pointer;
